# PyORBIT3

./: .gitignore  environment.yml  setup.py
.github/workflows/: build-conda.sh  build.sh  compilation.yml  conda-tests.sh  pip-build-mpich.sh  pip-tests-mpi.sh  run-tests.sh
compile_assist/: __init__.py  create_env.py  libraries.py
install/: create_env.py
install/images/: Ubuntu.Dockerfile
meson/: README.md  meson.build  test.py
meson/core/: meson.build
meson/core/mpi/: meson.build
meson/core/utils/: meson.build
